Layout bug test 5.

--- a/events-test.css
+++ b/events-test.css
@@ -4,7 +4,7 @@
 }
 
 #test {
-  border: 5px solid red;
+  /* border: 5px solid red; */
   height: 100vh; /* Fallback for browsers that do not support Custom Properties */
   height: calc(var(--vh, 1vh) * 100);
   overflow-y: scroll;
@@ -16,4 +16,15 @@
   height: 100%;
   border: 5px solid green;
   scroll-snap-align: start;
+}
+
+#fixed-layer {
+  /* border: 5px solid green; */
+  width: 100%;
+  top: 0;
+  position: fixed;
+  height: 100%;
+  background-image: url("./assets/images/events-4.jpg");
+  background-size: 400%;
+  background-position: 70% 10%;
 }
